# infix-string-calculator

./: .gitignore  .travis.yml  LICENSE  infix-string-calculator.cabal
app/: Main.hs
src/: Lexer.hs  Parser.hs  StringCalculator.hs  Types.hs
src/StringCalculator/: AST.hs  Lex.hs  Postfix.hs  Prefix.hs
src/Test/: Fluent.hs
test/: Spec.hs
