name:                infix-string-calculator
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/infix-string-calculator#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     StringCalculator
                     , Lexer
  build-depends:       base >= 4.7 && < 5
                     , HTF
                     , HUnit
                     , parsec
                     , derive
                     , QuickCheck
  default-language:    Haskell2010

executable infix-string-calculator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , infix-string-calculator
                     , HTF
  default-language:    Haskell2010

test-suite infix-string-calculator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , infix-string-calculator
                     , HTF
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/infix-string-calculator
